corrected scrolling when overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,15 +10,14 @@ body {
     display: flex;
     /*align-items: center;*/
     justify-content: center;
-    height: 100vh;
-    overflow: hidden;
+    height: 90vh;
     margin-top: 30px;
 }
 
 .container {
     border-radius: 5px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
+    overflow: scroll;
     width: 500px;
 }
 
